--- a/package.json
+++ b/package.json
@@ -6,5 +6,10 @@
   },
   "devDependencies": {
     "vite": "^6.1.1"
-  }
+  },
+  "dependencies": {
+    "@tailwindcss/vite": "^4.0.15",
+    "tailwindcss": "^4.0.15"
+  },
+  "type": "module"
 }
